--- a/gallows.html
+++ b/gallows.html
@@ -30,5 +30,6 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/sprite.js"></script>
+    <script src="js/game.js"></script>
   </body>
 </html>
