--- a/gallows.html
+++ b/gallows.html
@@ -31,5 +31,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/sprite.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/controller.js"></script>
   </body>
 </html>
