--- a/gallows.html
+++ b/gallows.html
@@ -32,5 +32,8 @@
     <script src="js/sprite.js"></script>
     <script src="js/game.js"></script>
     <script src="js/controller.js"></script>
+    <script>
+      createController(createGame(createSprite(".sprite"))).start();
+    </script>
   </body>
 </html>
